--- a/Todoey/View/Base.lproj/Main.storyboard
+++ b/Todoey/View/Base.lproj/Main.storyboard
@@ -1,55 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zCO-EW-EK8">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="8HW-cv-AUo">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--Todoey-->
-        <scene sceneID="66G-N6-QPc">
+        <scene sceneID="wKo-b3-cfU">
             <objects>
-                <tableViewController id="gAV-ou-MJ3" customClass="CategoryViewController" customModule="Todoey" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Vgi-q5-HSq">
+                <viewController id="8HW-cv-AUo" customClass="CategoryViewController" customModule="Todoey" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tyd-68-Q6G">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3gF-b7-0Yg" userLabel="Container">
+                                <rect key="frame" x="0.0" y="116" width="375" height="551"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="w8w-3f-5IY">
-                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="w8w-3f-5IY" id="rrx-ul-z4b">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="gAV-ou-MJ3" id="J9A-f5-2yw"/>
-                            <outlet property="delegate" destination="gAV-ou-MJ3" id="84G-V6-xTu"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="OoI-Q4-upe">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="mJ6-3V-QhL">
+                        <constraints>
+                            <constraint firstItem="3gF-b7-0Yg" firstAttribute="top" secondItem="rEW-dh-LQs" secondAttribute="top" id="HnM-A6-14W"/>
+                            <constraint firstItem="3gF-b7-0Yg" firstAttribute="leading" secondItem="rEW-dh-LQs" secondAttribute="leading" id="Kqq-98-9gB"/>
+                            <constraint firstItem="rEW-dh-LQs" firstAttribute="trailing" secondItem="3gF-b7-0Yg" secondAttribute="trailing" id="iGc-h0-r5h"/>
+                            <constraint firstItem="3gF-b7-0Yg" firstAttribute="bottom" secondItem="rEW-dh-LQs" secondAttribute="bottom" id="xek-re-VqC"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="rEW-dh-LQs"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Todoey" id="d9A-V5-SMO">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="R4L-NT-th4">
                             <connections>
-                                <action selector="onAddNewCategoryButtonClicked:" destination="gAV-ou-MJ3" id="IWf-AL-uaf"/>
+                                <action selector="onAddNewCategoryButtonClicked:" destination="8HW-cv-AUo" id="f4d-va-7uX"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <segue destination="JLX-HJ-TtF" kind="show" identifier="goToTodoItems" id="GgO-1w-klI"/>
+                        <segue destination="JLX-HJ-TtF" kind="show" identifier="goToTodoItems" id="ghR-yb-RGW"/>
                     </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ZeP-As-F9t" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a7W-yg-6hz" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="414" y="121"/>
+            <point key="canvasLocation" x="2095.1999999999998" y="120.98950524737631"/>
         </scene>
         <!--Todoey-->
         <scene sceneID="rQw-gJ-rBS">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aMO-Qf-dub" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <tableViewController id="JLX-HJ-TtF" customClass="TodoListViewController" customModule="Todoey" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="NvY-MN-oCm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
@@ -64,7 +65,7 @@
                             </connections>
                         </searchBar>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TodoListCell" id="oWv-0i-vTF">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="oWv-0i-vTF" customClass="SwipeTableViewCell" customModule="SwipeCellKit">
                                 <rect key="frame" x="0.0" y="72" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="oWv-0i-vTF" id="an2-zA-5BD">
@@ -78,40 +79,37 @@
                             <outlet property="delegate" destination="JLX-HJ-TtF" id="9AF-jU-xro"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="Rt1-of-5Yo">
+                    <navigationItem key="navigationItem" title="Todoey" largeTitleDisplayMode="always" id="Rt1-of-5Yo">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="FBX-Dp-eSy">
                             <connections>
                                 <action selector="onAddNewItemButtonClicked:" destination="JLX-HJ-TtF" id="EOK-tS-fNk"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="searchBar" destination="9YB-fo-tfd" id="q0u-OX-KnC"/>
+                    </connections>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aMO-Qf-dub" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1134" y="121"/>
+            <point key="canvasLocation" x="3012" y="120.98950524737631"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="WJQ-cm-WZS">
+        <scene sceneID="GEe-PR-0WA">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="zCO-EW-EK8" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="yCI-hG-0YX" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Bff-o3-EQS">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" largeTitles="YES" id="57S-tj-LRm">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <textAttributes key="titleTextAttributes">
-                            <fontDescription key="fontDescription" name="Kailasa" family="Kailasa" pointSize="17"/>
-                            <color key="textColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="gAV-ou-MJ3" kind="relationship" relationship="rootViewController" id="yU8-JC-Tr9"/>
+                        <segue destination="8HW-cv-AUo" kind="relationship" relationship="rootViewController" id="sYY-qx-CXN"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4pp-bd-HLw" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PRz-Qj-0Gl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-302" y="121"/>
+            <point key="canvasLocation" x="1156" y="120.98950524737631"/>
         </scene>
     </scenes>
 </document>
